Added a new action "Open the OctoPrint instance in the webbrowser"

--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,4 @@
 {
-  "Actions": [
-    {
-      "Icon": "arrow_left_to_line",
-      "Name": "Show Progress",
-      "States": [
-        {
-          "Image": "action/images/actionProgressImage"
-        }
-      ],
-      "SupportedInMultiActions": false,
-      "Tooltip": "Progress",
-      "UUID": "com.johnnymast.printdeck.progress"
-    }
-  ],
   "SDKVersion": 2,
   "Author": "Johnny Mast",
   "CodePath": "index.html",
@@ -20,7 +6,7 @@
   "Description": "See the progress of your 3d prints via Octoprint on your stream deck",
   "Category": "Print Deck",
   "CategoryIcon": "Images/categoryIcon",
-  "Name": "printdeck",
+  "Name": "Print Deck",
   "Icon": "octoprint-logo",
   "URL": "https://github.com/johnnymast/printdeck",
   "Version": "1.0",
@@ -34,22 +20,34 @@
       "MinimumVersion" : "10"
     }
   ],
-  "ApplicationsToMonitor": {
-    "mac": [
-      "com.apple.mail",
-      "com.apple.Safari",
-      "com.apple.systempreferences",
-      "com.apple.ActivityMonitor"
-    ],
-    "windows": [
-      "chrome.exe",
-      "Code.exe",
-      "MicrosoftEdge.exe",
-      "iexplore.exe"
-    ]
-  },
   "Software":
   {
     "MinimumVersion" : "4.1"
-  }
+  },
+  "Actions": [
+    {
+      "Icon": "arrow_left_to_line",
+      "Name": "Show Progress",
+      "States": [
+        {
+          "Image": "action/images/actionProgressImage"
+        }
+      ],
+      "SupportedInMultiActions": false,
+      "Tooltip": "Progress",
+      "UUID": "com.johnnymast.printdeck.progress"
+    },
+    {
+      "Icon": "arrow_left_to_line",
+      "Name": "Open Octoprint",
+      "States": [
+        {
+          "Image": "action/images/actionProgressImage"
+        }
+      ],
+      "SupportedInMultiActions": false,
+      "Tooltip": "Open OctoPrint",
+      "UUID": "com.johnnymast.printdeck.openportal"
+    }
+  ]
 }
