--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "SDKVersion": 2,
+  "Name": "Print Deck",
   "Author": "Johnny Mast",
   "CodePath": "plugin/index.html",
   "PropertyInspectorPath": "inspector/index.html",
   "Description": "See the progress of your 3d prints via Octoprint on your stream deck",
   "Category": "Print Deck",
   "CategoryIcon": "Images/categoryIcon",
-  "Name": "Print Deck",
   "Icon": "octoprint-logo",
   "URL": "https://github.com/johnnymast/printdeck",
   "Version": "1.0",
@@ -27,26 +27,26 @@
   "Actions": [
     {
       "Icon": "action/images/actionProgressImage",
-      "Name": "Show Progress",
+      "Name": "Show Print progress",
+      "Tooltip": "Show the OctoPrint progression on your Stream Deck",
       "States": [
         {
           "Image": "action/images/keyProgressImage"
         }
       ],
       "SupportedInMultiActions": false,
-      "Tooltip": "Progress",
       "UUID": "com.johnnymast.printdeck.progress"
     },
     {
       "Icon": "action/images/actionInstanceImage",
       "Name": "Open Octoprint",
+      "Tooltip": "Open your OctoPrint page in your web browser.",
       "States": [
         {
           "Image": "action/images/keyInstanceImage"
         }
       ],
       "SupportedInMultiActions": true,
-      "Tooltip": "Open OctoPrint",
       "UUID": "com.johnnymast.printdeck.openportal"
     }
   ]
